grafana/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
    - host: grafana.choo.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 3000
